--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
