"Updated routes, controllers, and models for playlist including changes to API endpoints, request handling, and database schema."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         "healthcheck",
         "healthchek",
         "newliked",
-        "updatevideo"
+        "subchannnel",
+        "subscribetoggle",
+        "updatevideo",
+        "userchannel",
+        "userplaylist"
     ]
 }
