Added configuration variables for tokens and Cloudinary to .env.sample file.

--- a/.env.sample
+++ b/.env.sample
@@ -3,11 +3,13 @@ PORT=5000
 MONGODB_URI=mongodb+srv://<usernmae>:<password>@mycluster.00zyh.mongodb.net/?retryWrites=true&w=majority&appName=MyCluster
 CORS_ORIGIN=*
 
+#Config Tokens
 ACCESS_TOKEN_SECRET= "your access token"
 ACCESS_TOKEN_EXPIRY=10d
 REFRESH_TOKEN_SECRET= "your refresh token"
 REFRESH_TOKEN_EXPIRY=30d
 
+#Config Cloudinary
 CLOUDINARY_CLOUD_NAME= "cloudinary username "
 CLOUDINARY_API_KEY= "cloudinary key "
 CLOUDINARY_API_SECRET= "cloudinary secret key "
